--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,9 @@ position:relative;
   width: 90%;
   FONT-SIZE: small;
   padding-left: 434px;
+  margin-right: 328px;
+    margin-bottom: 18px;
+    margin-top: 0px;
 }
 .para {
   margin-top: 2px;
